adjustment to avoid graph clipping

--- a/fix.css
+++ b/fix.css
@@ -10,7 +10,7 @@
 
  /* graph */
 #root > div > div.sc-fYxtnH.dBizAF > div > div.sc-bdVaJa.sc-bMvGRv.fUYXgU > div > div:nth-child(1) > div > div > div.sc-dUjcNx.hrbEwZ.sc-fYiAbW.biLepa > div.sc-bdVaJa.sc-fhYwyz.eKbcJp {
-    height: calc(100vh - 107px);
+    height: calc(100vh - 112px);
 }
 
 /* footer */
